--- a/app-front/src/App.css
+++ b/app-front/src/App.css
@@ -2,19 +2,17 @@
   box-sizing: border-box;
   font-family: 'Montserrat', sans-serif;
 }
+
 body {
   margin: 0;
   color: #222222;
 }
+
 a {
   text-decoration: none;
   color: #222222;
 }
 
-/* Navbar */
-.link_navbar {
-  font-weight: bold;
-}
-.link_navbar:hover {
-  color: #4682B4;
+:root {
+  --color-1: #4682B4;
 }
