--- a/app-front/src/components/FormInputText.css
+++ b/app-front/src/components/FormInputText.css
@@ -1,11 +1,11 @@
 .form_input {
-    cursor: pointer;
     background-color: inherit;
     color: var(--color-1);
     border: 1px solid var(--color-1);
     padding: 8px 24px;
     border-radius: 32px;
     font-weight: 500;
+    width: 100%;
 }
 
 .form_label {
